# bloomctl

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  charter.md  deny.toml  justfile  lefthook.yml
.claude/rules/: _index.md  cli-philosophy.md  rust.md  tenant-data-hygiene.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: alpha.yml  ci.yml  dependency-review.yml  release.yml  scorecards.yml
Formula/: bloomctl.rb
_kos/: kos.yaml
_kos/nodes/bedrock/: elem-codegen-iru-prepasses.yaml  elem-live-validated.yaml  elem-mcp-client-surface.yaml  elem-primitive-layer.yaml  elem-sidestep-pattern-port.yaml  elem-subdomain-chain.yaml  elem-vendored-spec.yaml  val-write-guard.yaml
crates/bloomctl-api/: Cargo.toml
crates/bloomctl-api/src/: generated.rs  (+1 more)
crates/bloomctl-cli/: Cargo.toml
crates/bloomctl-cli/src/: main.rs
crates/bloomctl-cli/tests/: audit_v2.rs  auth_chain.rs  emit.rs  enrich.rs  filter.rs  get_search_limit_since.rs  wiremock_endpoint.rs
crates/bloomctl-mcp/: Cargo.toml
crates/bloomctl-sdk/: Cargo.toml
docs/: audit-trail-format.md
examples/: Makefile  README.md
examples/asserts/: 01-round-trip.sh  02-cross-kind-enrich.sh  03-rank-stability.sh
examples/fixtures/: audit-event.jsonl  blueprint.jsonl  device.jsonl  vulnerability.jsonl
examples/recipes/: README.md  inventory.sh  stale-devices.sh  vuln-triage.sh
scripts/: check-tenant-leaks.sh
spec/: iru-endpoint-openapi.json  iru-endpoint-openapi.json.sha256
xtask/: Cargo.toml
xtask/src/: main.rs
(+20 files in other folders)
